Fixed bug where sending a message breaks due to overlapping dispatches.

--- a/frontend/src/components/Messages/SideMessages.module.css
+++ b/frontend/src/components/Messages/SideMessages.module.css
@@ -106,7 +106,7 @@
   z-index: 15;
 }
 
-.activeConvo {
+.inactiveConvo {
   transform: translateX(380px);
   border-left: 1px solid #2d3132;
 }
